@@ -675,7 +675,7 @@
             <div class="grid_12 borderBox">
                <div kendo-grid
              
-                 k-data-source="sourceDokterPelaksana" k-selectable="'row'" k-columns="columnDokters" k-pageable="'true'"
+			   k-data-source="sourceDokterPelaksana" k-selectable="'row'" k-columns="columnDokters" k-pageable="'true'"
                 k-sortable="'true'" k-ng-model="dataDokterSelected" ng-click="click(dataDokterSelected)">
             </div>
         </div>
