@@ -299,10 +299,14 @@ define(['initialize'], function(initialize) {
             $scope.setLamaPembedahan = function () {
                 console.log($scope.item.jamMulai);
                 console.log($scope.item.jamSelesai);
-                var tglAwal = new moment(new Date($scope.item.tglPembedahan)).format('YYYY-MM-DD');
-				var tglAkhir = new moment(new Date($scope.item.tglPembedahan)).format('YYYY-MM-DD');
+                var tglAwal = new moment(new Date()).format('YYYY-MM-DD');
+				var tglAkhir = new moment(new Date()).format('YYYY-MM-DD');
 				var JamAwal = new moment(new Date($scope.item.jamMulai)).format('HH:mm');
                 var JamAkhir= new moment(new Date($scope.item.jamSelesai)).format('HH:mm');
+                // if($scope.item.tglPembedahan) {
+                //     $scope.item.tglPembedahan = new Date();
+                //     // toastr.info('Tanggal Pembedahan ');
+                // }
                 if(JamAwal == 'Invalid date') {
                     var jam = $scope.item.jamMulai.split(":");
                     var setJam = new Date($scope.item.jamSelesai).setHours(jam[0]);
@@ -322,6 +326,12 @@ define(['initialize'], function(initialize) {
                     return $scope.item.lamaPembedahan = TotalWaktu;
                 // }
             }
+
+            // $scope.$watch('item.tglPembedahan', function(oldVal, newVal) {
+            //     if(oldVal != newVal) {
+            //         $scope.setLamaPembedahan();
+            //     }
+            // })
 
             function editData(e) {
                 e.preventDefault();
@@ -467,9 +477,9 @@ define(['initialize'], function(initialize) {
                     //     toastr.warning('Jam tidak boleh kosong')
                     } else if($scope.item.jamMulai > $scope.item.jamSelesai) {
                         toastr.warning('Jam Mulai tidak boleh kurang dari Jam Selesai');
+                    } else if ($scope.item.tglPembedahan == undefined || $scope.item.tglPembedahan === "" || $scope.item.tglPembedahan === null) {
+                        toastr.warning('Harap isi tanggal pembedahan')
                     } else {
-                        
-
                         var tglDimulai = '';
                         var tglSelesai = '';
                         if($scope.item.idRuangan === undefined) {
